@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)n9.c	1.66 (gritter) 11/5/06
+ * Sccsid @(#)n9.c	1.67 (gritter) 11/14/06
  */
 
 /*
@@ -1125,39 +1125,19 @@ illseq(int wc, const char *mb, int n)
 void
 storerq(int i)
 {
-	tchar	tp[NSRQ+1];
+	tchar	tp[2];
 
-	tp[0] = mkxfunc(RQ1, i & 037);
-	tp[1] = mkxfunc(RQ2, i >> 5 & 037);
-	tp[2] = mkxfunc(RQ3, i >> 10 & 037);
-	tp[3] = mkxfunc(RQ4, i >> 15 & 037);
-	tp[4] = mkxfunc(RQ5, i >> 20 & 037);
-	tp[5] = 0;
+	tp[0] = mkxfunc(RQ, i);
+	tp[1] = 0;
 	pushback(tp);
 }
 
 int
 fetchrq(tchar *tp)
 {
-	int	i;
-
-	i = 0;
-	if (ismot(tp[0]) || !isxfunc(tp[0], RQ1))
+	if (ismot(tp[0]) || !isxfunc(tp[0], RQ))
 		return 0;
-	i |= sbits(tp[0]) & 037;
-	if (ismot(tp[1]) || !isxfunc(tp[1], RQ2))
-		return 0;
-	i |= (sbits(tp[1]) & 037) << 5;
-	if (ismot(tp[2]) || !isxfunc(tp[2], RQ3))
-		return 0;
-	i |= (sbits(tp[2]) & 037) << 10;
-	if (ismot(tp[3]) || !isxfunc(tp[3], RQ4))
-		return 0;
-	i |= (sbits(tp[3]) & 037) << 15;
-	if (ismot(tp[4]) || !isxfunc(tp[4], RQ5))
-		return 0;
-	i |= (sbits(tp[4]) & 037) << 20;
-	return i;
+	return sbits(tp[0]);
 }
 
 void
